@@ -641,6 +641,9 @@ Extension Modules
 Tests
 -----
 
+- Issue #16559: Add more tests for the json module, including some from the
+  official test suite at json.org.  Patch by Serhiy Storchaka.
+
 - Issue #15304: Fix warning message when os.chdir() fails inside
   test.support.temp_cwd().  Patch by Chris Jerdonek.
 
